--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,9 @@ repositories {
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile("org.assertj:assertj-core:3.11.1")
+    compile group: 'junit', name: 'junit', version: '4.12'
+    compileOnly("org.projectlombok:lombok:1.18.8")
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+
 }
