--- a/build.gradle
+++ b/build.gradle
@@ -13,4 +13,11 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    testCompile group: 'org.assertj', name: 'assertj-core', version: '3.12.2'
+
+    compile 'org.projectlombok:lombok:1.16.2'
+    annotationProcessor 'org.projectlombok:lombok:1.16.2'
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
+
+
 }
